# sandwatch

./: .gitignore  CHANGELOG.md  LICENSE  Main.hs  README.md  default.nix  flake.nix  sandwatch.cabal  sandwatch.nix  scripts.nix  shell.nix
nix/: sources.json
src/: MyLib.hs
