cabal-version:      >=1.10
category:           Command Line
name:               sandwatch
synopsis:           record historical command runtimes for later prediction
description:        track historical runtimes for this directory and command, predict if there's time for a sandwich on this run
version:            0.1.1.0
license:            BSD3
license-file:       LICENSE
author:             Shae Erisson
maintainer:         shae@scannedinavian.com
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:  MyLib
  ghc-options:      -Wall -O2
  build-depends:
      aeson                  >=1.4.7.1 && < 2.2
    , atomic-write >= 0.2.0 && < 0.3
    , base                   >=4.14    && <4.20
    , bytestring >= 0.11 && < 0.12
    , criterion-measurement >= 0.2 && < 0.3
    , directory >= 1.3 && < 1.5
    , process >= 1.6 && < 1.7
    , text >= 2.0 && < 2.1
    , time >= 1.12 && < 1.13

  hs-source-dirs:   src
  default-language: Haskell2010

executable sandwatch
  main-is:          Main.hs
  ghc-options:      -Wall -O2
  build-depends:
      aeson                  >=1.4.7.1 && < 2.2
    , atomic-write >= 0.2.0 && < 0.3
    , base                   >=4.14    && <4.20
    , bytestring >= 0.11 && < 0.12
    , criterion-measurement >= 0.2 && < 0.3
    , directory >= 1.3 && < 1.5
    , process >= 1.6 && < 1.7
    , sandwatch
    , text >= 2.0 && < 2.1
    , time >= 1.12 && < 1.13

  default-language: Haskell2010

test-suite sandwatch-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  ghc-options:      -Wall -O2
  build-depends:
      aeson                  >=1.4.7.1 && < 2.2
    , atomic-write >= 0.2.0 && < 0.3
    , base                   >=4.14    && <4.20
    , bytestring >= 0.11 && < 0.12
    , criterion-measurement >= 0.2 && < 0.3
    , directory >= 1.3 && < 1.5
    , process >= 1.6 && < 1.7
    , text >= 2.0 && < 2.1
    , time >= 1.12 && < 1.13
